feat: add secrets and basic acl
